# alex-tavern-plugins

./: .gitignore  AGENTS.md  README.md  catalog.json  check.py  mcp_server.py  pyproject.toml
docs/: hooks.md  manifest.md  mcp.md  model-calls.md  sdk.md
experiences/: before_the_war.json  clean-writing.json
plugins/character_converter/: README.md  backend.py  plugin.toml
plugins/character_converter/tests/: test_character_converter.py
plugins/dynamic_character_presence/: README.md  backend.py  frontend.js  plugin.toml
plugins/dynamic_character_presence/tests/: conftest.py  test_backend.py  test_frontend.py
plugins/grammar_tools/: __init__.py  backend.py  plugin.toml
plugins/grammar_tools/tests/: test_grammar_tools.py
plugins/openrouter_provider/: __init__.py  backend.py  frontend.js  plugin.toml
plugins/suggestion_preloader/: README.md  frontend.js  plugin.toml
plugins/suggestion_preloader/tests/: test_suggestion_preloader_frontend.py
plugins/theme_creme/: README.md  frontend.js  plugin.toml
plugins/theme_creme/tests/: conftest.py  test_frontend.py
