[project]
name = "alex-tavern-plugin-hub"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["mcp>=1.0.0"]

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.0.0", "ruff>=0.11.0"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
